# DragonPy

./: .coveragerc  .coveralls.yml  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .project  .pydevproject  .travis.yml  AUTHORS  CoCo_test.cmd  CoCo_test.py  Dragon32_mem_info.py  Dragon32_test.py  Dragon32_test_loop_CPython.cmd  Dragon64_test.py  Dragon64_test.sh  Dragon64_test_CPython.sh  Dragon64_test_loop_CPython.cmd  Dragon64_test_pypy.sh  DragonPy.py  DragonPy_CLI.py  DragonPy_StarterGUI.sh  LICENSE  MANIFEST.in  Makefile  README.creole  README.md  README.rst  applepy_curses.py  base_cli.py  basic_tokens.py  boot_dragonpy.cmd  boot_dragonpy.py  cli.py  concept.py  concept2.py  concept2_main_process.py  concept2_sub_process.py  (+51 more)
.github/workflows/: pythonapp.yml  tests.yml
.run/: Template Python tests.run.xml  Unittests - __all___.run.xml  cli.py --help.run.xml  dev-cli.py update.run.xml
6809data/: CPU6809Instructions_build_skeleton.py  CPU6809_opcodes.csv  CPU6809csv_export.py  CPU6809make_Instructions.py  MC6809_data_raw.py  data_from_appendix_a.py
BASIC examples/: Characters1.bas  ListVariables.bas  display_all_chars.bas  display_all_chars_loop.bas  hustle.c10.bas  mandelbrot1.bas  mandelbrot2.bas  print_all_chars_loop.bas  print_timer.bas
BASIC games/: INVADER.bas
BASIC test programms/: DumpBasicProgram.bas  hex_view01.bas
BASIC tools/HexViewer/: README.creole
BASIC tools/InputOutput/: keyboard.bas
BASIC tools/TestCC_Registers/: testCC_ADDA.bas  testCC_NEGA.bas  testCC_SUBA.bas
Dragon32/: config.py  display.py  periphery_dragon.py
FloatingPoint/: test_FPA0.bas  test_FPA0_02.bas
HexViewer/: README.creole
MC6809data/: 6809dasm.pl.py  CPU6809Instructions_build_skeleton.py  CPU6809_opcodes.csv  CPU6809csv_export.py  CPU6809make_Instructions.py  MC6809_data2.py  MC6809_data_raw.py  MC6809_data_raw2.csv  MC6809_data_raw2.py  MC6809_skeleton.py
Multicomp6809/: README.creole  config.py  hex2bin.py  periphery_Multicomp6809.py
PyDC/: CassetteObjects.py  PyDC.py  PyDC_cli.py  README.creole  basic_tokens.py  utils.py  wave2bitstream.py
PyDC/PyDC/: CassetteObjects.py  PyDC.py  __init__.py  base_cli.py  basic_tokens.py  bitstream_handler.py  configs.py  tests.py  utils.py  wave2bitstream.py
PyDC/test_files/: Dragon Data Ltd - Examples from the Manual - 39~58 [run].bas  HelloWorld1.bas  LineNumberTest.bas
Simple6809/: ExBasROM.LST2  Grant's 6809 computer.URL  README.creole  asm_lst2py_unittest.py  config.py  hex2bin.py  make_mem_info.py  mem_info.py  periphery_simple6809.py
TestCC_Registers/: README.creole  testCC.bas  testCC_ADDA.bas  testCC_DEC.bas  testCC_INC.bas  testCC_LSL.bas  testCC_SUBA.bas  testCC_TST.bas
basic_editor/: editor.py  editor_base.py  highlighting.py  scrolled_text.py  status_bar.py  tkinter_utils.py  token_window.py
bootstrap/: create_DragonPy_bootstrap.py  source_adjust_options.py  source_after_install.py  source_extend_parser.py  source_prefix_code.py
components/: MC6821_PIA.py  MC6883_SAM.py  cassette.py  display.py  memory.py  periphery.py  periphery_dragon.py  periphery_simple6809.py  speaker.py
core/: DragonPy.py  base_cli.py  configs.py  cpu6809.py  cpu_control_server.py  memory_info.py
cpu_utils/: MC6809_registers.py  accumulators.py  condition_code_register.py
dev_startup_scripts/: create_coverage_report.cmd  create_coverage_report.sh  create_profile.sh  run_BASIC_Editor_loop.cmd  run_BASIC_Editor_loop.sh  run_CPython2_benchmark_loop.cmd  run_CPython3_benchmark_loop.cmd  run_CoCo2b_PyPy2_loop.cmd  run_CoCo2b_PyPy3_loop.cmd  run_CoCo2b_loop.cmd  run_Dragon32_CPython2_loop.cmd  run_Dragon32_PyPy2_loop.cmd  run_Dragon32_loop.cmd  run_Dragon64.sh  run_Dragon64_CPython2.sh  run_Dragon64_CPython2_loop.cmd  run_Dragon64_CPython3.sh  run_Dragon64_CPython3_loop.cmd  run_Dragon64_PyPy2.sh  run_Dragon64_loop.cmd  run_PyPy2_benchmark_loop.cmd  run_PyPy3_benchmark_loop.cmd  run_all_tests_CPython2_loop.cmd  run_all_tests_CPython3_loop.cmd  run_all_tests_PyPy2_loop.cmd  run_all_tests_PyPy3_loop.cmd  run_benchmark_CPython2_loop.cmd  run_benchmark_CPython3_loop.cmd  run_benchmark_PyPy2_loop.cmd  run_benchmark_PyPy3_loop.cmd
dragonlib/: api.py
dragonlib/CoCo/: basic_tokens.py
dragonlib/core/: basic.py  basic_parser.py
dragonlib/dragon32/: basic_tokens.py
dragonlib/tests/: run_all_dragonlib_tests.py  test_api.py  test_base.py  test_basic_parser.py
dragonlib/utils/: auto_shift.py  get_six.sh  iter_utils.py  lib2and3.py  logging_utils.py
dragonpy/: DragonPy_CLI.py  __init__.py  __main__.py  cli_arg_types.py  constants.py  cpu6809.py  cpu6809_html_debug.py  cpu6809_trace.py  dev_shell.py  publish.py
dragonpy/CoCo/: CoCo2b_rom.py  Color Basic v1.2 (1982)(Tandy).rom.sha1  Color Basic v1.3 (1982)(Tandy).rom.sha1  ExtendedColorBasic1.1.rom.sha1  bas13.rom.sha1  config.py  download_CoCo2b_roms.sh  extbas11.rom.sha1  machine.py  mem_info.py  periphery_coco.py
dragonpy/Dragon32/: Dragon32_rom.py  MC6821_PIA.py  MC6847.py  MC6883_SAM.py  basic_tokens.py  cassette.py  config.py  d32.rom.sha1  display.py  display_base.py  display_pygame.py  display_tkinter.py  download_Dragon32_rom.sh  dragon_charmap.py  (+7 more)
misc/: README.creole  add_info_in_trace.py  filter_xroar_trace.py  xroar_gdb_tests.py
requirements/: basic_requirements.txt  developer_installation.txt  git_readonly_installation.txt  normal_installation.txt
sbc09/: README.creole  create_trace.py  latex2creole.py  mem_info.py  periphery.py  sbc09.creole
temp_obsolete/: DragonPy_CLI.py  console_6809_test.py  console_6809_test_PyPy.cmd  start_Multicomp6809_CPython.sh  start_Simple6809_CPython.cmd  start_Simple6809_CPython.sh  start_sbc09_CPython.cmd  start_sbc09_PyPy.cmd
tests/: LST2Unittest.py  test_6809_StoreLoad.py  test_6809_address_modes.py  test_6809_arithmetic.py  test_6809_arithmetic_shift.py  test_6809_branch_instructions.py  test_6809_program.py  test_6809_register_changes.py  test_accumulators.py  test_all.py  test_base.py  test_condition_code_register.py  test_config.py  test_cpu6809.py
utils/: memory_info.py  simple_debugger.py
(+205 files in other folders)
